mule-fundamentals/v/3.6/anypoint-connector-tutorial.adoc
= Anypoint Connector Tutorial

:keywords: connectors, tutorial, fundamentals

After learning some of the basic functionality in the link:/documentation/display/current/Basic+Studio+Tutorial[Basic] and link:/documentation/display/current/Content-Based+Routing+Tutorial[Content-Based Routing Tutorials], it's time to try your hand at developing a more complex application which makes use of **Anypoint Connectors**.

image:mulestudio.png[mulestudio]

Out of the box, Anypoint Studio comes with a set of connectors that you can easily add to flows to connect your application with several common software as a service (SaaS) applications such as Salesforce, Google Contacts, Facebook, and Twitter. These connectors simplify the interaction with the SaaS providers' APIs considerably as they provide pre-built methods for all of the available connector operations. Because much of the functionality of the individual connectors is dependent upon its target, there is http://www.mulesoft.org/connectors[specific documentation] for each connector; that said, there are also many features common to almost all connectors. After creating and running the application in this tutorial, you should be able to apply what you've learned to connect applications to various SaaS applications. 

== Assumptions

This tutorial assumes that you have link:/documentation/display/current/Download+and+Launch+Anypoint+Studio[downloaded and installed Anypoint Studio]. If you do not have any previous experience with Eclipse or an Eclipse-based IDE, please review the brief introduction to the link:/documentation/display/current/Anypoint+Studio+Essentials[Anypoint Studio interface] and the document describing link:/documentation/display/current/Global+Elements[Global Elements in Mule]. Further, consider following the link:/documentation/display/current/Basic+Studio+Tutorial[Basic] and link:/documentation/display/current/Content-Based+Routing+Tutorial[Content-Based Routing] tutorials.

== Goals

In this tutorial, your goals are to:

. Walk through the process for obtaining Twitter API access and credentials.
. Create an application in Anypoint Studio that uses a connector to access the Twitter API.
. Learn how to use Global Elements and Foreach scope in the application.
. Run the application on a local runtime embedded in Anypoint Studio.
. Test the application using a browser. 
. Stop the application.
. _(Optional)_ Apply your knowledge to an extra credit challenge.

**

== Obtaining Access to the Twitter API

In order to use the Twitter API you must first create a Twitter developer account and obtain a set of credentials.

. If you don't already have one, create a http://twitter.com/signup[regular Twitter account]. You may wish to create an account specifically for testing as you will be posting things to Twitter in this exercise. 
. Visit the https://dev.twitter.com/[Twitter Developers page] and sign in using your Twitter account credentials. This activity creates a separate developer account for you, with an association to your regular Twitter account. +
. To create a new *Twitter Application*, navigate to https://dev.twitter.com/apps/new
. Complete the *Application Details* form according to the table and image below.
+
[cols=",",]
|===
|*Field* |*Value*
|*Name* |A name for your application which must be unique to the Twitter system and which cannot contain the word "Twitter".
|*Description* |A brief overview of the application you are building.
|*Website* |An entry is required here, however, because this Twitter application will not be public, this field is not meaningful; enter a simple placeholder value.
|*Callback URL* |Leave blank.
|===
+
image:devacct1.png[devacct1]
+
. Agree to the terms, enter a value for the CAPTCHA, then click *Create your Twitter application*.
. Optionally, access the *Settings* tab to adjust the *Application Type* from `Read only` to `Read and Write`. Use the radio buttons under *Application Type* to adjust the setting, then save your changes. +
+
image:devacct4.png[devacct4]  +
+
. Access the *Details* tab. Create an *Access Token* by clicking the button at the bottom of the screen (see image below). +
+
image:devacct2.png[devacct2]

[NOTE]
====
Using an *Access Token*, you can easily connect with the Twitter API via your own application. However, your access to the API is restricted to your own user account. For the purposes of this tutorial, an Access Token gives you the access you need for your application to interact with the Twitter API. 

However, if you wanted to expose such an application publicly, you would need to configure your application to link:/documentation/display/current/Using+a+Connector+to+Access+an+OAuth+API[authenticate via OAuth].
====


. Refresh the page in the browser to display the values for *Access token* and *Access token secret*. Because you need to enter these values in your Mule application, record the following four keys from Twitter (refer to image below):   +
. Consumer key 
. Consumer secret
. Access token 
. Access token secret
 +
 image:devacct3.png[devacct3]



== Modeling a Flow with a Connector

Launch Anypoint Studio and create a new Mule Project named `Connector Tutorial`. If you need more directions on launching Studio and creating a project, please refer to the link:/documentation/display/current/Basic+Studio+Tutorial[Basic Studio Tutorial]. 

Next, use the building blocks in the Studio palette to model an application that: 

. Receives an HTTP request
. Submits a query over Twitter's API to retrieve a user's timeline of tweets
. Logs each individual tweet, displaying the tweets in Studio's console

You can model this application using these building blocks in Studio:

[cols=",",]
|===
|*link:/documentation/display/current/HTTP+Connector[HTTP Connector]* |Allows your Mule application to connect to Web resources through the HTTP or HTTPS protocol. Find this in the Connectors section of the palette.
|*http://www.mulesoft.org/connectors/twitter[Twitter Connector]* |Enables you to perform operations against one or more Twitter resources. Find this in the Connectors section of the palette.
|*link:/documentation/display/current/Foreach[Foreach Scope]* |Processes each item in a POJO iteratively. Find this in the Scopes section of the palette.
|*link:/documentation/display/current/Logger+Component+Reference[Logger Component]* |Logs messages or activity based on the value of a Mule expression. Find this in the Components section of the palette.
|===

Drag and drop these building blocks into place on the canvas to visually construct, or model, a flow, as shown below.

image:flow1.png[flow1]

Once you configure the individual elements within it, which is in the next section, this flow accomplishes the goals that you set out to achieve with this application. Each building block that you select and place on the canvas performs part of the functionality of your application, as shown in the image below.

image:flow+globitos.png[flow+globitos]



== Configuring the Flow Elements

Next, configure the flow elements to make the application accept HTTP requests, and submit queries to Twitter for a user's tweet timeline. Your goal is to invoke` http://localhost:8081/gettweets?sname=mulesoft `and have the application send a request to Twitter to retrieve all of the recent tweets of the particular Twitter user specified in the query parameter, which, in this example, is MuleSoft.

Nearly all Mule elements provide configuration options, which you can set in one of two ways:

* Via the building block *Properties* *Editor* in the console of Studio's visual editor
* Via XML code in Studio's *XML* editor, or in any other XML editing environment +


The following instructions walk you through how to configure each building block in the visual editor and via XML. Use the tabs to switch back and forth between the instructions for the visual editor and the XML editor. 

=== HTTP Connector

. Click the HTTP building block in your flow to open its http://www.mulesoft.org/documentation/display/current/The+Properties+Editor[Properties Editor].  For this element to work, you must reference an abstract element called a *Connector Configuration*, which contains several of the high level necessary configuration properties. One single Connector Configuration element can be referenced by as many HTTP connectors as you like. Create a new Connector Configuration element by clicking the green plus sign next to the Connector Configuration field.
 +
 image:http+long.png[http+long]

. A new window opens up. Fill in the two required fields: *Host* and *Port*. Set `localhost` as the host and leave the default value `8081` as the port.
+
image:global+element.png[global+element]


  
+
[cols=",",options="header",]
|===
|Field |Value
|*Name* |`HTTP_Listener_Configuration`
|*Host* |`localhost`
|*Port* |`8081`
|===
. Click *Ok* to close this dialogue. Notice how the Connector Configuration field now contains a reference to the element you just created. You can edit it further by clicking the `edit` icon.
. Now provide a value for the required field *Path*: `gettweets`.
+
image:http.png[http]
+
[cols=",",options="header",]
|===
|Field |Value
|*Path* |`gettweets`
|===

+
Configure the HTTP connector as follows:
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*doc:name* |`HTTP`
|*config-ref* a|
----

HTTP_Listener_Configuration
----

|*path* |`gettweets `
|===

For this element to work, you must reference an abstract element called a *Connector Configuration*, which contains several of the high level necessary configuration properties. One single Connector Configuration element can be referenced by as many HTTP connectors as you like. The attribute in the connector *config-ref* references this connector configuration element. You must now create an element outside the flow that matches the referenced name.

[width="100%",cols="50%,50%",]
|===
|*Attribute* |*Value*
|*name* a|
----

HTTP_Listener_Configuration
----

|*host* |`localhost`
|*port* |`8081`
|*doc:name* a|
----

HTTP Listener Configuration
----

|===

=== Twitter Connector

Click the *Twitter connector* to open its Properties Editor, then enter values for the fields according to the table below.

image:cttwitter.png[cttwitter]

[cols=",,",options="header",]
|===
|Field |Value |Description
|*Display Name* |`Twitter` |The name Studio displays for the element in the flow.
|*Operation* |`Get user timeline by screen name` |Defines the operation to perform on Twitter; this value returns a tweet stream from the twitter user you specify.
|*Screen Name* |`#[message.inboundProperties.'http.query.params'.sname]` |Defines the twitter user; set to an expression that extracts a parameter from the HTTP request.
|*Page* |1 |Specifies the page of results to retrieve. 1 is the default value.
|*Count* |`20` |Defines the number of tweets the query returns. 20 is the default value.
|*Since Id* |-1 |Returns results with an id greater than the one specified here. -1 is the default value.
|===

Configure the Twitter connector as follows (note that one attribute is excluded on purpose; you will add the attribute in the next step):

[cols=",",options="header",]
|====
|Element |Description
|*`twitter:get-user-timeline-by-screen-name`* |Defines the operation to perform on Twitter; this value returns a tweet stream from the twitter user you specify.
|====

[cols=",,",options="header",]
|=====
|Attribute |Value |Description
|*doc:name* |`Twitter` |The name Studio displays for the element in the flow.
|*screenName* |`#[message.inboundProperties.'http.query.params'.sname]` |Defines the twitter user; set to an expression that extracts a parameter from the HTTP request.
|=====

You may notice that the Studio visual editor displays a red *x* and a note that the config-ref attribute is required. Studio is alerting you that this connector requires a global connector configuration, which you define as a *global element*. A global element allows you to enter configuration information once, then reference the credentials from multiple elements in a flow or in multiple flows. In this case, you use the Twitter global element to configure all your connection details and API access credentials which the Twitter connector in your flow uses when it queries Twitter.

Read more about link:/documentation/display/current/Global+Elements[Global Elements in Mule].

. Click the plus sign next to the *Connector Configuration* field. +

image:cttwitterplus.png[cttwitterplus] +


. Enter values for the fields according to the table below. +

image:twt4.png[twt4]

[cols=",",options="header",]
|====
|Field |Value
|*Name* |`Twitter1`
|*Access Key* |Your unique Access Token value as obtained from Twitter
|*Access Secret* |Your unique Access Token Secret value as obtained from Twitter
|*Consumer Key* |Your unique Consumer Key value as obtained from Twitter
|*Consumer Secret* |Your unique Consumer Secret value as obtained from Twitter
|*Use SSL* |`true` (checked)
|====

    
. Click *OK* to save the configurations. The *Connector Configuration* field should now be populated with the name of the global element you just created, `Twitter1`.

. Above all flows in your application, configure the global element as follows: +
  

+
[cols=",",options="header",]
|===
|Attribute |Value
|*name* |`Twitter1`
|*accessKey* |Your unique Access Token value as obtained from Twitter
|*accessSecret* |Your unique Access Token Secret value as obtained from Twitter
|*consumerKey* |Your unique Consumer Key value as obtained from Twitter
|*consumerSecret* |Your unique Consumer Secret value as obtained from Twitter
|*doc:name* |Twitter1
|===
. Revisit the configuration of the Twitter connector in your flow. Add the *`config-ref`* attribute as follows:

=== Foreach Scope

When Twitter returns a response to the query, the payload is an array of objects, each of which describes a tweet and its attending metadata. The only field this application needs to access is **`text`**, as it contains the actual tweet content. You can access the text of the latest tweet via the expression `#[message.payload[0].text]`, but this application uses a Foreach scope to access the text of every tweet in the array.

Click the *Foreach* to open its Properties Editor. Keep the default values, as shown below.

image:ForEachunconfig.png[ForEachunconfig]

[cols=",",options="header",]
|===
|Field |Value
|*Display Name* |`For Each`
|*Counter Variable Name* |`counter`
|*Batch Size* |`1`
|*Root Message Variable Name* |`rootMessage`
|===

Add a *Foreach* scope as follows:

[cols=",",options="header",]
|====
|Attribute |Value
|*doc:name* |`For Each`
|====

=== Logger

Click the  *Logger* to open its Properties Editor, then enter values for the fields according to the table below.

image:actlog.png[actlog]

[cols=",",options="header",]
|===
|Field |Value
|*Display Name* |`Logger`
|*Message* |`#[payload.text]`
|*Level* |`INFO `
|===

Configure the *Logger*, _inside the Foreach scope_, as follows:

[cols=",",options="header",]
|===
|Attribute |Value
|*doc:Name* |`Logger`
|*message* |`#[payload.text]`
|*level* |`INFO `
|===


Your complete application XML, once configured, should look like the code below.

[NOTE]
====
Keep in mind that for this example to work, you must manually configure the following values of the *Twitter global element* (**`twitter:config`** element):

* Access Key
* Access Secret
* Consumer Key
* Consumer Secret
====

== Running the Application

Having built, configured, and saved your new application, you are ready to run it on the embedded Mule server (included as part of the bundled download of Anypoint Studio).

. In the  *Package Explorer*, right-click project name, then select  *Run As*  >  *Mule Application* . (If you have not already saved, Mule prompts you to save now.)
. Mule immediately kicks into gear, starting your application and letting it run. When the startup process is complete, Studio displays a message in the console that reads,  `Started app 'connector_tutorial'` . +

image:started_connector_app.png[started_connector_app] +


== Using the Application

. Open a Web browser, then navigate to the following URL:  +
 `  http://localhost:8081/gettweets?sname=mulesoft   `
. This request initiates a request to the application which, ultimately, returns a `gettweets` file that your browser prompts you to download. Rather than downloading the file, return to Anypoint Studio and check the contents of the console for logged message. The console displays a set of 20 log entries that spell out the latest tweets from MuleSoft's official Twitter account (see image below).
+

image:tweets.png[tweets] +
 +
. In your browser, replace the value of `mulesoft` with another twitter user's screenname. Press enter, then view the logged results in the Studio console.

== Stopping the Application

To stop the application, click the red, square *Terminate* icon above the console.

image:StopApp.png[StopApp]

== Extra Credit

Now that you're familiar with connectors, try applying your knowledge to an extra task. Revise your application so that, after retrieving tweets from a user, it posts the last of these to your own demo twitter account.

As it's kind of impolite to copy someone's tweet without acknowledging its origin, keep in mind that your retweet should follow this structure *RT @screenname : tweet text*

Use the hints below if you need help.

==== image:icon-question-blue-big%281%29+%282%29.png[icon-question-blue-big%281%29+%282%29] Hints

How do I get the username?

Insert a second Twitter connector in your app, then reuse the expression from the screenName attribute (Screen Name field).

Alternatively, you can use a more reliable expression: as each tweet comes with metadata, you can access the variable you need – screen name from this metadata. In this case, the screen name can be accessed using the following expression:

 How do I alter the tweet to include RT @username: ?

There are a few ways to accomplish this task, one of which is to add the extra text to the tweet inside a new variable. However, you can take a shortcut using the link:/documentation/display/current/Set+Payload+Transformer+Reference[set payload] transformer. Replace the content of the entire payload using an expression composed of multiple parts, such as the following the following:

image:actsetp.png[actsetp]

How do I post the tweet to Twitter?

You can configure a second Twitter connector to perform a different action using the *Operation* field. Set the operation to `Update Status`. If you replaced the payload in the previous step, simply use `#[payload]` as the status. If you stored the text of the tweet in a variable, then call the variable instead.

image:twitter2.png[twitter2]

==== image:icon-checkmark-blue-big%283%29+%281%29.png[icon-checkmark-blue-big%283%29+%281%29] Answer

 View the answer, including explanation of steps and complete code

. Append a *Set Payload* message processor to the end of your flow, then click to open its Properties Editor.
. In the *Value* field, set the payload to  `RT @#[message.payload[0].user.screenName]: #[message.payload[0].text]`. This uses two of the variables in the object returned by the Get timeline operation: the screenName and the tweet text.
. Add another *Twitter Connector* to the end of the flow, then click to open its Properties Editor.
. Set its *Connector Configuration* to the same global element as the first Twitter Connector.
. Set its Operation to *Update Status*, then set the status to `#[payload]`.

image:flow+extra+credit.png[flow+extra+credit]

[NOTE]
====
Keep in mind that for this example to work, you must manually configure the following values of the global Twitter connector (`twitter:config `element):

* accessKey
* accessSecret
* consumerKey
* consumerSecret
====

== See Also

* *NEXT STEP:* Try the link:/documentation/display/current/Mule+Message+Tutorial[Mule Message Tutorial].
* See http://www.mulesoft.org/connectors[specific documentation for each connector].
* Import link:/documentation/display/current/Installing+Connectors[additional connectors] into your instance of Anypoint Studio.
* Learn how to create your own Anypoint Connectors using the link:/documentation/display/current/Anypoint+Connector+DevKit[Anypoint Connector DevKit].
